Fixed word wrap and added check for length of text

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,10 +11,6 @@
 .intro {
   margin: 80px 0 45px 0;
 }
-/* .intro-inner {
-  display: flex;
-  flex-direction: row;
-} */
 .labels {
   display: flex;
   flex-direction: row;
@@ -94,7 +90,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 20px;
-  height: 71px;
+  min-height: 71px;
   width: 100%;
   background: #3a3939;
   border-radius: 10px;
@@ -112,8 +108,6 @@
   opacity: 0.5;
   border-radius: 10px;
 }
-/* ------------------------------------------------------- */
-
 .task__checkbox {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -126,48 +120,18 @@
   opacity: 1;
   cursor: pointer;
 }
-
 .task__checkbox:checked {
   background-color: #6532f8;
 }
-
-/* .checkbox-cover {
-  position: relative;
-  display: block;
-  width: 20px;
-  height: 20px;
-  cursor: pointer;
-}
-.checkbox-cover::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background-color: rgba(101, 50, 248, 0);
-  box-sizing: border-box;
-  border: 1px solid rgba(243, 246, 249, 0.3);
-  z-index: 10;
-}
-.checkbox-cover:hover::before {
-  border-color: rgba(243, 246, 249, 0.6);
-}
-.task__checkbox:checked + .checkbox-cover::before {
-  background-color: rgba(101, 50, 248, 1);
-} */
-
-/* ------------------------------------------------------- */
-
 .task__name {
   display: block;
   width: 100%;
+  max-width: 660px;
   text-align: left;
   font-size: 20px;
   line-height: 23px;
   color: white;
+  word-wrap: break-word;
 }
 .task__name_checked {
   display: block;
